[workspace]
members = [
    "e2e/lockstep_user",
    "zbus-lockstep",
    "zbus-lockstep-macros",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
zbus_xml = { version = "5.2.0" }
zvariant = { version = "5.1", default-features = false }


# Metadata below is read by `cargo-release`.
# pre-release: update the changelog, correct verion numbers in sources.

[workspace.metadata.release]
# Only allow releasing from the main branch
allow-branch = ["main"]

# The hook that automatically runs git-cliff to prepend the new version to CHANGELOG.md before committing
pre-release-hook = ["git-cliff", "--tag", "v{{version}}", "--prepend", "CHANGELOG.md"]

# Template for the git commit message
commit-message = "chore(release): prepare for v{{version}}"

# Template for the git tag
tag-name = "v{{version}}"
tag-message = "Release {{version}}"

# Keep workspace member versions in lockstep (synchronized)
shared-version = true

# Automatically push commits and tags to GitHub
push = true

# Automatically publish the crates to crates.io
publish = true

# AUTOMATIC VERSION REPLACEMENTS in source and documentation files:
[[workspace.metadata.release.pre-release-replacements]]
file = "zbus-lockstep/src/lib.rs"
search = 'html_root_url = "https://docs.rs/zbus-lockstep/{{prev_version}}"'
replace = 'html_root_url = "https://docs.rs/zbus-lockstep/{{version}}"'
exact = true

[[workspace.metadata.release.pre-release-replacements]]
file = "zbus-lockstep-macros/src/lib.rs"
search = 'html_root_url = "https://docs.rs/zbus-lockstep-macros/{{prev_version}}"'
replace = 'html_root_url = "https://docs.rs/zbus-lockstep-macros/{{version}}"'
exact = true

# 1. Updates all 3 occurrences in the root README.md:
[[workspace.metadata.release.pre-release-replacements]]
file = "README.md"
search = 'zbus-lockstep = { version = "{{prev_version}}"'
replace = 'zbus-lockstep = { version = "{{version}}"'
exact = true

# 2. Updates the zbus-lockstep crate README:
[[workspace.metadata.release.pre-release-replacements]]
file = "zbus-lockstep/README.md"
search = 'zbus-lockstep = "{{prev_version}}"'
replace = 'zbus-lockstep = "{{version}}"'
exact = true

# 3. Updates the zbus-lockstep-macros crate README:
[[workspace.metadata.release.pre-release-replacements]]
file = "zbus-lockstep-macros/README.md"
search = 'zbus-lockstep-macros = "{{prev_version}}"'
replace = 'zbus-lockstep-macros = "{{version}}"'
exact = true
