[workspace]
members = [
    "e2e/lockstep_user",
    "zbus-lockstep",
    "zbus-lockstep-macros",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
zbus_xml = { version = "5.2.0" }
zvariant = { version = "5.1", default-features = false }


# Metadata below is read by `cargo-release`.
# pre-release: update the changelog, correct verion numbers in sources.

[workspace.metadata.release]
# Only allow releasing from the main branch
allow-branch = ["main"]

# The hook that automatically runs git-cliff to prepend the new version to CHANGELOG.md before committing
pre-release-hook = ["git-cliff", "--config", "../cliff.toml", "--unreleased", "--tag", "v{{version}}", "--prepend", "../CHANGELOG.md"]

# Template for the git commit message
pre-release-commit-message = "chore(release): prepare for v{{version}}"

# Template for the git tag
tag-name = "v{{version}}"
tag-message = "Release {{version}}"

# Keep workspace member versions in lockstep (synchronized)
shared-version = true

# Automatically push commits and tags to GitHub
push = true

# Automatically publish the crates to crates.io
publish = true
