[workspace]
members = [
    "e2e/lockstep_user",
    "zbus-lockstep",
    "zbus-lockstep-macros",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.87.0"

[workspace.dependencies]
zbus_xml = { version = "5.2.0" }
zvariant = { version = "5.1", default-features = false }


# Metadata below is read by `cargo-release`.
# pre-release: update the changelog, correct verion numbers in sources.

[workspace.metadata.release]
# Only allow releasing from the main branch
allow-branch = ["main"]

# Template for the git commit message
pre-release-commit-message = "chore(release): prepare for v{{version}}"

# Template for the git tag
tag-name = "v{{version}}"
tag-message = "Release {{version}}"

# Keep workspace member versions in lockstep (synchronized)
shared-version = true

# Automatically push commits and tags to GitHub
push = true

# Automatically publish the crates to crates.io
publish = true
