[package]
name = "zbus-lockstep-macros"
authors = ["Luuk van der Duim <luukvanderduim@gmail.com>"]
description = "Macros to keep types in lockstep with DBus XML definitions"
version = "0.6.0"
edition =  { workspace = true }
keywords = ["type-safety", "zbus", "DBus", "IPC"]
documentation = "https://docs.rs/zbus-lockstep-macro"
repository = "https://github.com/luukvanderduim/zbus-lockstep"
readme = "README.md"
license = "MIT"
include = ["src/**/*", "LICENSE-MIT", "README.md"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
zbus_xml = { workspace = true }
zvariant = { workspace = true }

[dev-dependencies]
version-sync = "0.9"
zbus-lockstep = { path = "../zbus-lockstep" }


[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = 'html_root_url = "https://docs.rs/zbus-lockstep-macros/[0-9.]+"'
replace = 'html_root_url = "https://docs.rs/zbus-lockstep-macros/{{version}}"'

[[package.metadata.release.pre-release-replacements]]
file = "README.md"
search = 'zbus-lockstep-macros = "[0-9.]+"'
replace = 'zbus-lockstep-macros = "{{version}}"'
